# RTX-YTDownloader-Pro

./: .gitignore  README.md  package-lock.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
ui/: index.html  splash.html
